<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context="com.example.ezrodriguez.bibliotecaaltice.LoginActivity">

    <LinearLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="143sp"
            android:src="@drawable/escuelaaltice" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingLeft="30sp"
            android:paddingRight="30sp"
            >

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:layout_marginTop="20sp"
                />
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lblPassword"
                android:inputType="textPassword"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/messageSignIn"
                />
            <TextView
                android:id="@+id/button_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/messageRegister"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_gravity="center">

            </com.google.android.gms.common.SignInButton>

        </LinearLayout>


        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="25sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>


    </LinearLayout>

